--- a/Index.css
+++ b/Index.css
@@ -1,6 +1,6 @@
 body{
     /*background-color: rgb(16, 18, 20);*/
-    background-color: white;
+    background-color: black;
     font-size: 20px;
     margin: 0;
     padding: 0;
@@ -42,13 +42,16 @@ section,footer{
     display: flex;
     padding: 20px;
     flex-direction: row;
-    /*background-color: rgb(102,0,0);*/
-    background-color: white;
+    background-color: black;
     color: black;
 }
 footer{
     color: gray;
     background: black;
+    margin-top: 70px;
+    font-size: 15px;
+    text-align: center;
+    justify-content: center;
 }
 
 div{
@@ -95,13 +98,11 @@ input[type="text"]{
 }
 
 .Main_sections img{
-    width: 300px;
+    width: 400px;
     height: 300px;
     display: flex;
     padding: 20px;
     flex-direction: row;
-    border-radius: 50%;
+    border-radius: 10%;
     margin: auto;
-    box-shadow: gray 0 0 10px;
-    border: -10px solid white;
 }
